# vast-automation

./: .gitignore  .gitmodules  .travis  .travis.yml  Dockerfile  Pipfile  README.md  WWCra.ipynb  WWCra_upsilon.ipynb  WWCra_visualisations.ipynb  aavso.py  astropy_helper.py  dellogs.sh  devsite.sh  distance_tests.ipynb  do_aavso_report.py  do_aperture.py  do_calibration.py  do_charts.py  do_field_charts.py  do_lightcurve.py  do_muniwin.py  do_photometry.py  do_profile.py  do_reference_frame.py  do_stats_charts.py  do_upsilon.py  docker-compose.yml  fits_tests.ipynb  init.py  init.py.example  match.conf  muniphot.conf  only_upsilon.py  output.py  plot_write_times.ipynb  pngCurrent.sh  pyproject.toml  read_times.py  reading.py  (+18 more)
docker/: Dockerfile  jupyter_notebook_config.json  jupyter_notebook_config.py  makeDocker.sh
notebooks/: APASS.ipynb  ChartAugment.ipynb  Gatspy.ipynb  Simbad Queries.ipynb  WWCra.ipynb  WWCra_visualisations.ipynb  altair_test.ipynb  analyse_aperture.ipynb  analyse_pht.ipynb  analyse_quality.ipynb  aperture.ipynb  astrometry.net.ipynb  csv_load.ipynb  dewpoint.ipynb  distance_tests.ipynb  epoch_loaddumps.ipynb  epoch_shifting.ipynb  findem.ipynb  finder_chart.ipynb  finder_chart_full.ipynb  fits_binning.ipynb  fits_non_reference_frame.ipynb  fits_plot_vars.ipynb  fits_rotate-animate.ipynb  fits_rotate.ipynb  fits_tests.ipynb  jd_filtering.ipynb  mag_vs_stdev.ipynb  outlier_filtering.ipynb  phaseDiag.ipynb  phased_lightcurves.ipynb  read_pht_files.ipynb  realscratch.ipynb  scratch.ipynb  star_match_debug.ipynb  stats_charts.ipynb  ucac4Testing.ipynb  (+5 more)
(+114 files in other folders)
