[tool.poetry]
name = "vast-automation"
version = "0.1.0"
description = ""
authors = ["Mike Rosseel <mike.rosseel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
appnope = "*"
astropy = "*"
attrs = "*"
backcall = "*"
beautifulsoup4 = "*"
bleach = "*"
certifi = "*"
chardet = "*"
cycler = "*"
decorator = "*"
defusedxml = "*"
entrypoints = "*"
html5lib = "*"
idna = "*"
importlib-metadata = "*"
jedi = "*"
jinja2 = "*"
keyring = "*"
kiwisolver = "*"
markupsafe = "*"
matplotlib = "*"
mistune = "*"
more-itertools = "*"
numpy = "*"
pandas = "*"
parso = "*"
pexpect = "*"
photutils = "*"
pickleshare = "*"
pillow = "*"
pluggy = "*"
prometheus-client = "*"
prompt-toolkit = "*"
ptyprocess = "*"
py = "*"
pygments = "*"
pyparsing = "*"
python-dateutil = "*"
pytz = "*"
pyzmq = "*"
requests = "*"
send2trash = "*"
soupsieve = "*"
testpath = "*"
toml = "*"
tqdm = "*"
traitlets = "*"
urllib3 = "*"
wcwidth = "*"
webencodings = "*"
gatspy = "*"
ipdb = "*"
ipykernel = "*"
black = "*"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
nbconvert = "*"
nbformat = "*"
jupyter-client = "*"
jupyter-console = "*"
jupyter-core = "*"
nose2 = "*"
notebook = "*"
ipykernel = "*"
ipython = "*"
ipython-genutils = "*"
coverage = "*"
rope = "*"
pylint = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
